--- a/views/index.jade
+++ b/views/index.jade
@@ -1,18 +1,31 @@
-doctype
+doctype html
 html
-    head
-        title= "Welcome to BitChat"
-        script(src='/jq.js')
-        script(src='/code.js')
-        script(src='/socket.io/socket.io.js')
-    body
-        #content(style='width: 500px; height: 300px; margin: 0 0 20px 0; border: solid 1px #999; overflow-y: scroll;')
-        .controls
-            | Name:
-            input#name(style='width:350px;')
-            br
-            input(id='field', style='width:350px;')
-            input.send(id='send', type='button', value='send')
-            br
-            | Chat Log:
-            input#status(style='width:500px;')
+  head
+    title Node Authentication
+    |     
+    link(rel='stylesheet', href='//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css')
+    // load bootstrap css
+    link(rel='stylesheet', href='//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css')
+    // load fontawesome
+    style.
+      body        { padding-top:80px; }
+  body
+    .container
+      .jumbotron.text-center
+        h1
+          span.fa.fa-lock
+          |  Login to BitChat
+        |         
+        p Login or Register with:
+        |         
+        a.btn.btn-default(href='/login')
+          span.fa.fa-user
+          |  Local Login
+        |         
+        a.btn.btn-default(href='/signup')
+          span.fa.fa-user
+          |  Local Signup
+        a.btn.btn-default(href='/chat')
+          span.fa.fa-user
+          |  Chat Demo
+
