--- a/views/chat.jade
+++ b/views/chat.jade
@@ -13,7 +13,8 @@ html
             body        { padding-top:80px; }
      body
         .container
-            #content(style='width: 500px; height: 300px; margin: 0 0 20px 0; border: solid 1px #999; overflow-y: scroll;')
+            #content(style='width: 500px; height: 300px; margin: 0 0 20px 0; border: solid 1px #999; overflow-y: scroll;', class='col-md-8')
+            h1 Let's chat
             .controls
             | Name:
             input#name(style='width:350px;')
