--- a/views/chat.jade
+++ b/views/chat.jade
@@ -2,8 +2,8 @@ doctype
 html
     head
         title= "Welcome to BitChat"
-        script(src='http://bitchat.jpalala.com/jq.js')
-        script(src='http://bitchat.jpalala.com/code.js')
+        script(src='http://chatapp.jpalala.com:3001/jq.js')
+        script(src='http://chatapp.jpalala.com:3001/code.js')
         script(src='/socket.io/socket.io.js')
         link(rel='stylesheet', href='//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css')
         // load bootstrap css
