--- a/views/index.jade
+++ b/views/index.jade
@@ -14,7 +14,7 @@ html
       .jumbotron.text-center
         h1
           span.fa.fa-lock
-          |  Login to BitChat
+          |  Chat now at /chat
         |         
         p Login or Register with:
         |         
@@ -25,7 +25,7 @@ html
         a.btn.btn-default(href='/signup')
           span.fa.fa-user
           |  Local Signup
-        a.btn.btn-default(href='/chat')
+        a.btn.btn-primary.btn-default(href='/chat')
           span.fa.fa-user
           |  Chat Demo
 
